[package]
authors = ["Eric Kidd <git@randomhacks.net>"]
description = "Fetch secrets from either environment variables or Hashicorp's Vault"
documentation = "http://docs.rs/credentials/"
license = "CC0-1.0"
name = "credentials"
readme = "README.md"
repository = "https://github.com/emk/credentials"
version = "0.12.0"
edition = "2018"

[features]
default-tls = ["rustls-tls-webpki-roots"]
rustls-tls-native-roots = ["reqwest/rustls-tls-native-roots"]
rustls-tls-webpki-roots = ["reqwest/rustls-tls-webpki-roots"]

[dependencies]
async-trait = "0.1.52"
dirs = "4.0.0"
lazy_static = "1.1"
regex = "1.0"
reqwest = { version = "0.11.8", default-features = false, features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0"
thiserror = "1.0.20"
tokio = { version = "1.15.0", default-features = false, features = ["macros"] }
tracing = "0.1.29"
url = "2.2.2"

[dev-dependencies]
anyhow = "1"
env_logger = "0.9.0"
reqwest = { version = "0.11.8", default-features = false, features = ["rustls-tls-webpki-roots"] }
tokio = { version = "1.15.0", default-features = false, features = ["rt-multi-thread"] }
tracing-subscriber = { version = "0.3.4", features = ["env-filter"] }