[package]
authors = ["Eric Kidd <git@randomhacks.net>"]
description = "Fetch secrets from either environment variables or Hashicorp's Vault"
documentation = "http://docs.rs/credentials/"
license = "CC0-1.0"
name = "credentials"
readme = "README.md"
repository = "https://github.com/emk/credentials"
version = "1.0.0-beta.1"
edition = "2018"

[features]
default-tls = ["rustls-tls-webpki-roots"]
rustls-tls-native-roots = ["reqwest/rustls-tls-native-roots"]
rustls-tls-webpki-roots = ["reqwest/rustls-tls-webpki-roots"]

[dependencies]
async-trait = "0.1.77"
home = "0.5.9"
once_cell = "1.19.0"
regex = "1.10"
reqwest = { version = "0.11.23", default-features = false, features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0"
thiserror = "1.0.56"
tokio = { version = "1.35.1", default-features = false }
tracing = "0.1.40"
url = "2.5.0"

[dev-dependencies]
anyhow = "1"
env_logger = "0.10.1"
reqwest = { version = "0.11.23", default-features = false, features = ["rustls-tls-native-roots"] }
tokio = { version = "1.35.1", default-features = false, features = ["macros", "rt-multi-thread"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
